--- a/Facebook Desktop/Elements/WatermarkTextbox.xaml
+++ b/Facebook Desktop/Elements/WatermarkTextbox.xaml
@@ -1,12 +1,14 @@
 ﻿<UserControl x:Class="Facebook_Desktop.Elements.WatermarkTextbox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
-             Height="30" d:DesignWidth="300">
+             xmlns:Mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:D="http://schemas.microsoft.com/expression/blend/2008"
+             Mc:Ignorable="D"
+             Height="30" D:DesignWidth="300">
     <Grid>
-        <TextBox x:Name="WaterTextbox" HorizontalAlignment="Stretch" Height="30" VerticalAlignment="Top" TextChanged="WaterTextbox_TextChanged" />
-        <Label x:Name="HintLabel" Content="{Binding Watermark}" HorizontalAlignment="Left" Margin="2,0,0,0" VerticalAlignment="Bottom" Foreground="#FFC5C2C2" IsHitTestVisible="False"/>
+        <TextBox x:Name="_waterTextbox" HorizontalAlignment="Stretch" Height="30" VerticalAlignment="Top"
+                 TextChanged="WaterTextboxTextChanged" />
+        <Label x:Name="_hintLabel" Content="{Binding Watermark}" HorizontalAlignment="Left" Margin="2,0,0,0"
+               VerticalAlignment="Bottom" Foreground="#FFC5C2C2" IsHitTestVisible="False"/>
     </Grid>
 </UserControl>
