--- a/Facebook Desktop/Pages/MainPage.xaml
+++ b/Facebook Desktop/Pages/MainPage.xaml
@@ -1,39 +1,50 @@
 ﻿<Page x:Class="Facebook_Desktop.Pages.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Facebook_Desktop.Elements"
-      mc:Ignorable="d" 
+      xmlns:Mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:Local="clr-namespace:Facebook_Desktop.Elements"
+      Mc:Ignorable="d"
       d:DesignHeight="672" d:DesignWidth="1024"
-	Title="MainPage">
+      Title="MainPage">
 
-    <Grid x:Name="HolderGrid">
-        <Grid x:Name="HeaderGrid" HorizontalAlignment="Stretch" Height="100" Margin="0,30,0,0" VerticalAlignment="Top" Background="#34495e" MouseLeave="HeaderGrid_MouseLeave">
+    <Grid x:Name="_holderGrid">
+        <Grid x:Name="_headerGrid" HorizontalAlignment="Stretch" Height="100" Margin="0,30,0,0" VerticalAlignment="Top"
+              Background="#34495e" MouseLeave="HeaderGridMouseLeave">
             <Grid>
                 <Grid.Background>
-                    <ImageBrush ImageSource="/Facebook Desktop;component/noise.png" Viewport="0,0,100,100" ViewportUnits="Absolute" TileMode="Tile" Stretch="None" AlignmentX="Left" AlignmentY="Top"  />
+                    <ImageBrush ImageSource="/Facebook Desktop;component/noise.png" Viewport="0,0,100,100"
+                                ViewportUnits="Absolute" TileMode="Tile" Stretch="None" AlignmentX="Left"
+                                AlignmentY="Top" />
                 </Grid.Background>
             </Grid>
 
-            <Rectangle Fill="#ecf0f1" HorizontalAlignment="Left" Height="66" Margin="17,17,0,0" VerticalAlignment="Top" Width="66"  />
-            <Image x:Name="ProfileImage" HorizontalAlignment="Left" Height="64" Margin="18,18,0,0" VerticalAlignment="Top" Width="64"/>
-            <Label x:Name="NameLabel" Content="Eddy V" HorizontalAlignment="Left" Margin="100,10,0,0" FontSize="14" Foreground="#FFE4E4E4" VerticalAlignment="Top" FontWeight="Medium"/>
+            <Rectangle Fill="#ecf0f1" HorizontalAlignment="Left" Height="66" Margin="17,17,0,0" VerticalAlignment="Top"
+                       Width="66" />
+            <Image x:Name="_profileImage" HorizontalAlignment="Left" Height="64" Margin="18,18,0,0"
+                   VerticalAlignment="Top" Width="64" />
+            <Label x:Name="_nameLabel" Content="Eddy V" HorizontalAlignment="Left" Margin="100,10,0,0" FontSize="14"
+                   Foreground="#FFE4E4E4" VerticalAlignment="Top" FontWeight="Medium" />
 
             <Grid Width="50" HorizontalAlignment="Left" Margin="250,0,0,0">
-                <Label Content="Profile: 10% complete" HorizontalAlignment="Center" Margin="2,10,-133,0" VerticalAlignment="Top" FontSize="20" Foreground="White" FontWeight="Thin" Width="181" />
+                <Label Content="Profile: 60% complete" HorizontalAlignment="Center" Margin="2,10,-193,0"
+                       VerticalAlignment="Top" FontSize="20" Foreground="White" FontWeight="Thin" Width="241" />
             </Grid>
 
-            <Grid x:Name="HeaderTriggerGrid" HorizontalAlignment="Center" Width="100" MouseEnter="HeaderTriggerGrid_MouseEnter">
-                <Rectangle Fill="#00F5DEB3"></Rectangle>
-                <Polygon x:Name="TrianglePoly" Opacity="0" Points="0,0 5,7,10,0" Margin="0,0,0,2" Fill="#FFC5C5C5" HorizontalAlignment="Center" VerticalAlignment="Bottom" IsHitTestVisible="False"/>
+            <Grid x:Name="_headerTriggerGrid" HorizontalAlignment="Center" Width="100"
+                  MouseEnter="HeaderTriggerGridMouseEnter">
+                <Rectangle Fill="#00F5DEB3" />
+                <Polygon x:Name="_trianglePoly" Opacity="0" Points="0,0 5,7,10,0" Margin="0,0,0,2" Fill="#FFC5C5C5"
+                         HorizontalAlignment="Center" VerticalAlignment="Bottom" IsHitTestVisible="False" />
             </Grid>
         </Grid>
 
         <Grid HorizontalAlignment="Stretch" Height="30" VerticalAlignment="Top" Background="#2c3e50">
             <Grid>
                 <Grid.Background>
-                    <ImageBrush ImageSource="/Facebook Desktop;component/noise.png" Viewport="0,0,100,100" ViewportUnits="Absolute" TileMode="Tile" Stretch="None" AlignmentX="Left" AlignmentY="Top"  />
+                    <ImageBrush ImageSource="/Facebook Desktop;component/noise.png" Viewport="0,0,100,100"
+                                ViewportUnits="Absolute" TileMode="Tile" Stretch="None" AlignmentX="Left"
+                                AlignmentY="Top" />
                 </Grid.Background>
             </Grid>
 
@@ -45,53 +56,66 @@
                 <local:FadeLabel Content="settings" Margin="5,0,0,0"/>
             </StackPanel>-->
 
-            <Label x:Name="PingLabel" HorizontalAlignment="Right" Foreground="#FF9F9F9F" Margin="0,0,5,0"/>
+            <Label x:Name="_pingLabel" HorizontalAlignment="Right" Foreground="#FF9F9F9F" Margin="0,0,5,0" />
         </Grid>
 
-        <Grid x:Name="ChatGrid" HorizontalAlignment="Right" Width="200" Margin="0,130,-190,30" VerticalAlignment="Stretch" Background="#2c3e50" MouseLeave="ChatGrid_MouseLeave" >
+        <Grid x:Name="_chatGrid" HorizontalAlignment="Right" Width="200" Margin="0,130,-190,30"
+              VerticalAlignment="Stretch" Background="#2c3e50" MouseLeave="ChatGridMouseLeave">
             <Grid>
                 <Grid.Background>
-                    <ImageBrush ImageSource="/Facebook Desktop;component/noise.png" Viewport="0,0,100,100" ViewportUnits="Absolute" TileMode="Tile" Stretch="None" AlignmentX="Left" AlignmentY="Top"  />
+                    <ImageBrush ImageSource="/Facebook Desktop;component/noise.png" Viewport="0,0,100,100"
+                                ViewportUnits="Absolute" TileMode="Tile" Stretch="None" AlignmentX="Left"
+                                AlignmentY="Top" />
                 </Grid.Background>
             </Grid>
 
-            <ScrollViewer VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" Margin="0,0,0,60">
-                <StackPanel x:Name="ChatStackPanel">
-
-                </StackPanel>
+            <ScrollViewer VerticalScrollBarVisibility="Visible" Visibility="Visible" HorizontalScrollBarVisibility="Disabled"
+                          Margin="0,0,0,60">
+                <StackPanel x:Name="ChatStackPanel" Visibility="Visible" />
             </ScrollViewer>
-            <Ellipse x:Name="OnlineStatusEllipse" Fill="#2ecc71" HorizontalAlignment="Left" Height="10" Margin="30,0,0,10" VerticalAlignment="Bottom" Width="10" MouseDown="ChangeStatus" ToolTip="Online"/>
-            <Ellipse x:Name="BusyStatusEllipse" Fill="#e74c3c" HorizontalAlignment="Center" Height="10" Margin="0,0,0,10" VerticalAlignment="Bottom" Width="10" MouseDown="ChangeStatus" ToolTip="Away/Busy"/>
-            <Ellipse x:Name="InvisibleStatusEllipse" HorizontalAlignment="Right" Height="10" Margin="0,0,30,10" VerticalAlignment="Bottom" Width="10" Stroke="#FFA0A0A0" MouseDown="ChangeStatus" Fill="#02000000" ToolTip="Invisible"/>
-            <Rectangle x:Name="StatusRectangle" Fill="#3498db" HorizontalAlignment="Left" Height="2" Margin="22,0,0,2" VerticalAlignment="Bottom" Width="25"/>
+            <Ellipse x:Name="_online" Fill="#2ecc71" HorizontalAlignment="Left" Height="10"
+                     Margin="30,0,0,10" VerticalAlignment="Bottom" Width="10" MouseDown="ChangeStatus" ToolTip="Online" />
+            <Ellipse x:Name="_onlineSome" Fill="#e74c3c" HorizontalAlignment="Center" Height="10"
+                     Margin="0,0,0,10" VerticalAlignment="Bottom" Width="10" MouseDown="ChangeStatus"
+                     ToolTip="Away/Busy" />
+            <Ellipse x:Name="_invisibleStatusEllipse" HorizontalAlignment="Right" Height="10" Margin="0,0,30,10"
+                     VerticalAlignment="Bottom" Width="10" Stroke="#FFA0A0A0" MouseDown="ChangeStatus" Fill="#02000000"
+                     ToolTip="Invisible" />
+            <Rectangle x:Name="_statusRectangle" Fill="#3498db" HorizontalAlignment="Left" Height="2" Margin="22,0,0,2"
+                       VerticalAlignment="Bottom" Width="25" />
 
-            <Grid x:Name="ChatTriggerGrid" VerticalAlignment="Center" Height="100" MouseEnter="ChatTriggerGrid_MouseEnter" >
-                <Rectangle Fill="#00F5DEB3"></Rectangle>
-                <Polygon x:Name="ChatTrianglePoly" Points="0,0 5,7,10,0" Margin="0,0,0,2" Fill="#FFC5C5C5" HorizontalAlignment="Left" VerticalAlignment="Center" IsHitTestVisible="False" RenderTransformOrigin="0.5,0.5">
+            <Grid x:Name="_chatTriggerGrid" VerticalAlignment="Center" Height="100"
+                  MouseEnter="ChatTriggerGridMouseEnter">
+                <Rectangle Fill="#00F5DEB3" />
+                <Polygon x:Name="_chatTrianglePoly" Points="0,0 5,7,10,0" Margin="0,0,0,2" Fill="#FFC5C5C5"
+                         HorizontalAlignment="Left" VerticalAlignment="Center" IsHitTestVisible="False"
+                         RenderTransformOrigin="0.5,0.5">
                     <Polygon.RenderTransform>
                         <TransformGroup>
-                            <ScaleTransform/>
-                            <SkewTransform/>
-                            <RotateTransform Angle="90"/>
-                            <TranslateTransform/>
+                            <ScaleTransform />
+                            <SkewTransform />
+                            <RotateTransform Angle="90" />
+                            <TranslateTransform />
                         </TransformGroup>
                     </Polygon.RenderTransform>
                 </Polygon>
             </Grid>
         </Grid>
 
-        <Grid x:Name="PlayerChatGrid" HorizontalAlignment="Stretch" Height="30" VerticalAlignment="Bottom" Background="#34495e">
+        <Grid x:Name="_playerChatGrid" HorizontalAlignment="Stretch" Height="30" VerticalAlignment="Bottom"
+              Background="#34495e">
             <Grid>
                 <Grid.Background>
-                    <ImageBrush ImageSource="/Facebook Desktop;component/noise.png" Viewport="0,0,100,100" ViewportUnits="Absolute" TileMode="Tile" Stretch="None" AlignmentX="Left" AlignmentY="Top"  />
+                    <ImageBrush ImageSource="/Facebook Desktop;component/noise.png" Viewport="0,0,100,100"
+                                ViewportUnits="Absolute" TileMode="Tile" Stretch="None" AlignmentX="Left"
+                                AlignmentY="Top" />
                 </Grid.Background>
             </Grid>
 
-            <StackPanel x:Name="PlayerChatStackPanel" Orientation="Horizontal">
-
-            </StackPanel>
+            <StackPanel x:Name="_playerChatStackPanel" Orientation="Horizontal" />
         </Grid>
 
-        <ContentControl x:Name="ContentContainer" HorizontalAlignment="Stretch" Panel.ZIndex="-1" Margin="0,40,10,30" VerticalAlignment="Stretch"/>
+        <ContentControl x:Name="_contentContainer" HorizontalAlignment="Stretch" Panel.ZIndex="-1" Margin="0,40,10,30"
+                        VerticalAlignment="Stretch" />
     </Grid>
 </Page>
